--- a/拓展/数据提取/预训练数据提取.ipynb
+++ b/拓展/数据提取/预训练数据提取.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c1fd61e6",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
     "from huggingface_hub import login\n",
     "\n",
     "# 1. 直接登录（安全写法：不要硬编码 token）\n",
-    "login(\"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\")\n",
+    "login(\"hf_xxx\")\n",
     "dataset = load_dataset(\"BAAI/CCI3-HQ\", split=\"train\",streaming=True,token=True)\n",
     "\n"
    ]
