--- a/拓展/菜谱数据/data.ipynb
+++ b/拓展/菜谱数据/data.ipynb
@@ -3057,9 +3057,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "饿了么智慧点餐",
+   "display_name": "d2l",
    "language": "python",
-   "name": "python3"
+   "name": "pytorch"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3071,7 +3071,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.22"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
