--- a/拓展/fasttest/fasttest.ipynb
+++ b/拓展/fasttest/fasttest.ipynb
@@ -6,12 +6,74 @@
    "id": "6e7ce658",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sys,platform\n",
+    "print(sys.version);print(platform.architecture())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0b1c3506",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import fasttext"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57184f0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import fasttext, os, time\n",
+    "\n",
+    "data  = 'train.txt'\n",
+    "model = 'cls.bin'          # 分类模型\n",
+    "# model = 'vec.bin'        # 若做词向量改成这条\n",
+    "\n",
+    "start = time.time()\n",
+    "if os.path.exists(model):\n",
+    "    os.remove(model)\n",
+    "\n",
+    "# ① 文本分类\n",
+    "model = fasttext.train_supervised(\n",
+    "        input=data,\n",
+    "        epoch=25,\n",
+    "        lr=0.5,\n",
+    "        wordNgrams=2,\n",
+    "        dim=100,\n",
+    "        loss='softmax')\n",
+    "model.save_model(model)\n",
+    "\n",
+    "# ② 若只想训词向量，用下面这行代替上面整段\n",
+    "# model = fasttext.train_unsupervised(input=data, model='skipgram', dim=100, epoch=25)\n",
+    "# model.save_model(model)\n",
+    "\n",
+    "print('训练完成，耗时 {:.1f}s，模型大小 {:.2f}MB'.format(\n",
+    "        time.time()-start, os.path.getsize(model)/1024/1024))"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "饿了么智慧点餐",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.12"
   }
  },
  "nbformat": 4,
